some value changed

--- a/user-service.yml
+++ b/user-service.yml
@@ -14,3 +14,5 @@ gateway:
 
 order_service:
   url: "http://127.0.0.1:8000/order-service/%s/orders"
+  exception:
+    order_is_empty: User's orders is empty.
